--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body class="body">
-    <!-- <header> -->
-        <!-- <div class="container header--container">
+    <header>
+        <div class="container header--container">
             <a class="logo" href="">
                 Web <span class="logo__color">Studio </span>
-            </a> -->
+            </a>
             <!--navigation-->
-            <!-- <nav class="nav">
+            <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item ">
                         <a class="nav__link " href="./index.html">Студия</a>
@@ -35,9 +35,9 @@
                         <a class="nav__link" href="">Контакты</a>
                     </li>
                 </ul>
-            </nav> -->
+            </nav>
             <!--contacts-->
-            <!-- <ul class="contacts header__contacts">
+            <ul class="contacts ">
                 <li class="contacts__item">
                     <a class="contacts__link" href="mailto:info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
@@ -56,14 +56,13 @@
                 </li>
             </ul>
         </div>
-    </header> -->
+    </header>
     <main>
         <!-- filters -->
-        <!-- <section class="sections">
+        <section class="sections">
             <div class="filters container">
-            <!-- Заголовок H1 сделан невидимым -->
-                <!-- <h1 class="visually-hidden">Веб-сайты Приложения Дизайн Маркетинг</h1>
-                    <ul class="filters__list">
+                            <h1 class="visually-hidden">Веб-сайты Приложения Дизайн Маркетинг</h1>
+                     <ul class="filters__list">
                         <li class="filters__item">                            
                             <button class="filters__button" type="button">
                                 Все
@@ -91,10 +90,10 @@
                         </li>
                     </ul> 
                 </div>
-                <div class=" container ">
+                <div class=" container "> 
                     <ul class="project">
                         <li class="project__item">
-                            <a href="" class="project__link">
+                            <a href="" class="project__link project__link--first">
                                 <div class="project__wrap">
                                 <img src="./image/portfolio/tehnohriak.jpg" width="370" alt="foto of people">
                                     <p class="project__text-imj">
@@ -112,7 +111,7 @@
                         <li class="project__item">
                             <a href="" class="project__link">
                                 <div class="project__wrap">
-                                <img src="./image/portfolio/poster.jpg" width="370" alt="foto men play in basketball">
+                                <img src="./image/portfolio/poster.jpg" width="100%" alt="foto men play in basketball">
                                     <p class="project__text-imj">
                                         Технокряк это современная площадка распространения коронавируса.
                                         Компании используют эту платформу для цифрового шпионажа и атак
@@ -239,81 +238,85 @@
                         </li>
                     </ul>
                 </div>
-        </section> --> -->
+        </section>  
     </main>
 
     <!--footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-contacts">
-                <a class="footer-logo" href="">
-                    Web <span class="footer-logo__White">Studio </span>
-                </a>
-                <address class="address">
-                    <ul class="address__list">
-                        <li class="address__item">
-                            <a class="address__link "
-                                href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-                                target="_blank" rel="noopener noreferrer">
-                                <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>
+            <div class="footer-contacts-wrap">
+                <div class="footer-contacts">
+                    <a class="footer-logo" href="">
+                        Web <span class="footer-logo__White">Studio </span>
+                    </a>
+                    <address class="address">
+                        <ul class="address__list">
+                            <li class="address__item">
+                                <a class="address__link "
+                                    href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                                    target="_blank" rel="noopener noreferrer">
+                                    <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>
+                            </li>
+                            <li class="address__item">
+                                <a class="address__link" href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li class="address__item">
+                                <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social footer-social-wrap">
+                    <h3 class="footer-social__header">присоединяйтесь</h3>
+                    <ul class="footer-social__list">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-instagram">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address__item">
-                            <a class="address__link" href="mailto:info@example.com">info@example.com</a>
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address__item">
-                            <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-facebook">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-linkedin">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </div>
-            <div class="footer-social footer-social-wrap">
-                <h3 class="footer-social__header">присоединяйтесь</h3>
-                <ul class="footer-social__list">
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-instagram">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-twitter">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-facebook">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-linkedin">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <form class="footer-form footer-form-wrap">
                 <h3 class="footer-form__header">подпишитесь на рассылку</h3>
                 <div class="footer-form__list">
                     <input type="email" name="email" placeholder="E-mail" class="footer-form__imail">
-                    <button class="futer-form__button">Подписаться <svg class="futer-form__icon" width="24" height="24">
-                            <use href="./image/icon.svg#icon-icon-send">
-                            </use>
-                        </svg></button>
+                    <div class="futer-form__button-wrap">
+                        <button class="futer-form__button">Подписаться <svg class="futer-form__icon" width="24" height="24">
+                                <use href="./image/icon.svg#icon-icon-send">
+                                </use>
+                            </svg></button>
+                    </div>
                 </div>
             </form>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
